--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/three": "^0.164.0",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.7",
+    "svelte-tweakpane-ui": "^1.2.4",
     "three": "^0.164.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
